--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://raw.githubusercontent.com/ashleykleynhans/civitai-downloader/main/download.py\n",
+    "# !wget https://raw.githubusercontent.com/ashleykleynhans/civitai-downloader/main/download.py\n",
     "!sudo mv download.py /usr/local/bin/download-model\n",
     "!sudo chmod +x /usr/local/bin/download-model"
    ]
@@ -431,7 +431,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
