--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -268,13 +268,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password:Password:"
+     ]
+    }
+   ],
    "source": [
-    "# !wget https://raw.githubusercontent.com/ashleykleynhans/civitai-downloader/main/download.py\n",
-    "!sudo mv download.py /usr/local/bin/download-model\n",
-    "!sudo chmod +x /usr/local/bin/download-model"
+    "from getpass import getpass\n",
+    "import os\n",
+    "import wget\n",
+    "from subprocess import Popen\n",
+    "\n",
+    "# wget.download(url=\"https://raw.githubusercontent.com/ashleykleynhans/civitai-downloader/main/download.py\")\n",
+    "# password=getpass()\n",
+    "# !echo {password} > mypassword\n",
+    "!sudo -S cp download.py /usr/local/bin/download-model < mypassword\n",
+    "!sudo -S chmod +x /usr/local/bin/download-model < mypassword"
    ]
   },
   {
@@ -286,9 +301,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e6e97f3ae1758b899f3be4e905975192'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -303,7 +329,9 @@
     "def prompt_for_civitai_token():\n",
     "    token = input('Please enter your CivitAI API token: ')\n",
     "    store_token(token)\n",
-    "    return token"
+    "    return token\n",
+    "\n",
+    "prompt_for_civitai_token()"
    ]
   },
   {
@@ -431,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
