--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -18,7 +18,42 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/checkpoints/sd15\n",
+      "models/checkpoints/sd2\n",
+      "models/checkpoints/sdxl\n",
+      "models/checkpoints/pony\n",
+      "models/checkpoints/sd3\n",
+      "models/checkpoints/upscale\n",
+      "models/checkpoints/flux1\n",
+      "models/vae/sd15\n",
+      "models/vae/sd2\n",
+      "models/vae/sdxl\n",
+      "models/vae/sd3\n",
+      "models/vae/flux1\n",
+      "models/controlnet/sd15\n",
+      "models/controlnet/sd2\n",
+      "models/controlnet/sdxl\n",
+      "models/controlnet/sd3\n",
+      "models/controlnet/flux1\n",
+      "models/loras/sd15\n",
+      "models/loras/sd2\n",
+      "models/loras/sdxl\n",
+      "models/loras/pony\n",
+      "models/loras/sd3\n",
+      "models/loras/flux1\n",
+      "models/embeddings/sd15\n",
+      "models/embeddings/sd2\n",
+      "models/embeddings/sdxl\n",
+      "models/embeddings/sd3\n",
+      "models/embeddings/flux1\n"
+     ]
+    }
+   ],
    "source": [
     "!bash run_first.sh"
    ]
@@ -36,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import notebook_login\n",
+    "from huggingface_hub import notebook_login, hf_hub_download\n",
     "\n",
     "notebook_login()"
    ]
@@ -46,15 +81,6 @@
    "metadata": {},
    "source": [
     "## Download Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from huggingface_hub import hf_hub_download"
    ]
   },
   {
@@ -128,7 +154,9 @@
    "outputs": [],
    "source": [
     "# Download AbyssOrangeMix3 Model\n",
-    "hf_hub_download(repo_id=\"WarriorMama777/OrangeMixs\", filename=\"AOM3A1B_orangemixs.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+    "hf_hub_download(repo_id=\"WarriorMama777/OrangeMixs\", filename=\"Models/AbyssOrangeMix3/AOM3A1B_orangemixs.safetensors\", local_dir=\"./models/checkpoints/sd15\")\n",
+    "!mv ./models/checkpoints/sd15/Models/AbyssOrangeMix3/AOM3A1B_orangemixs.safetensors ./models/checkpoints/sd15\n",
+    "!rmdir ./models/checkpoints/sd15/Models/AbyssOrangeMix3/"
    ]
   },
   {
@@ -147,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download Counterfeit-V3.0 fp16 Hotfix Model\n",
+    "# Download Counterfeit-V3.0 fp16 fix Model\n",
     "hf_hub_download(repo_id=\"gsdf/Counterfeit-V3.0\", filename=\"Counterfeit-V3.0_fix_fp16.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
    ]
   },
@@ -172,6 +200,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download DreamShaper 8 pruned Model\n",
+    "hf_hub_download(repo_id=\"Lykon/DreamShaper\", filename=\"DreamShaper_8_pruned.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download DreamShaper 8 Inpainting Model\n",
+    "hf_hub_download(repo_id=\"Lykon/DreamShaper\", filename=\"DreamShaper_8_INPAINTING.inpainting.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download MeinaMix Model\n",
+    "!download-model https://civitai.com/api/download/models/948574?type=Model&format=SafeTensor&size=pruned&fp=fp16 ./models/checkpoints/sd15"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,6 +244,40 @@
    "source": [
     "# Download Stable Diffusion 1.5 VAE\n",
     "hf_hub_download(repo_id=\"stabilityai/sd-vae-ft-mse-original\", filename=\"vae-ft-mse-840000-ema-pruned.safetensors\", local_dir=\"./models/vae/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download kl-f8-anime2 VAE\n",
+    "hf_hub_download(repo_id=\"hakurei/waifu-diffusion-v1-4\", filename=\"vae/kl-f8-anime2.ckpt\", local_dir=\"./models/vae/sd15\")\n",
+    "!mv ./models/vae/sd15/vae/kl-f8-anime2.ckpt ./models/vae/sd15\n",
+    "!rmdir ./models/vae/sd15/vae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download OrangeMix VAE\n",
+    "hf_hub_download(repo_id=\"WarriorMama777/OrangeMixs\", filename=\"VAEs/orangemix.vae.pt\", local_dir=\"./models/vae/sd15\")\n",
+    "!mv ./models/vae/sd15/VAEs/orangemix.vae.pt ./models/vae/sd15\n",
+    "!rmdir ./models/vae/sd15/VAEs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Anything VAE\n",
+    "!download-model https://civitai.com/api/download/models/119279?type=Model&format=PickleTensor ./models/vae/sd15"
    ]
   },
   {
@@ -206,6 +298,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download ShortBang Concept LoRA\n",
+    "!download-model https://civitai.com/api/download/models/122064 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Disembodied Head V2 LoRA\n",
+    "!download-model https://civitai.com/api/download/models/100482 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Dullahan LoRA\n",
+    "!download-model https://civitai.com/api/download/models/186885 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/bin/download-model: line 1: import: command not found\n",
+      "/usr/local/bin/download-model: line 2: import: command not found\n",
+      "/usr/local/bin/download-model: line 3: import: command not found\n",
+      "/usr/local/bin/download-model: line 4: import: command not found\n",
+      "/usr/local/bin/download-model: line 5: import: command not found\n",
+      "/usr/local/bin/download-model: line 6: from: command not found\n",
+      "/usr/local/bin/download-model: line 7: from: command not found\n",
+      "/usr/local/bin/download-model: line 8: import: command not found\n",
+      "/usr/local/bin/download-model: line 10: syntax error near unexpected token `('\n",
+      "/usr/local/bin/download-model: line 10: `TOKEN_FILE = Path.home() / '.civitai' / 'config''\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download Dullahan LoRA\n",
+    "!download-model https://civitai.com/api/download/models/77230 ./models/loras/sd15"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -219,23 +368,97 @@
    "outputs": [],
    "source": [
     "# Download EasyNegative\n",
-    "hf_hub_download(repo_id=\"gsdf/EasyNegative\", repo_type=\"dataset\", filename=\"EasyNegative.safetensors\", local_dir=\"./models/embeddings/sd15\")\n",
+    "hf_hub_download(repo_id=\"gsdf/EasyNegative\", repo_type=\"dataset\", filename=\"EasyNegative.safetensors\", local_dir=\"./models/embeddings/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download EasyNegativeV2\n",
-    "hf_hub_download(repo_id=\"gsdf/Counterfeit-V3.0\", filename=\"EasyNegativeV2.safetensors\", local_dir=\"./models/embeddings/sd15\")\n",
+    "hf_hub_download(repo_id=\"gsdf/Counterfeit-V3.0\", filename=\"embedding/EasyNegativeV2.safetensors\", local_dir=\"./models/embeddings/sd15\")\n",
+    "!mv ./models/embeddings/sd15/embedding/EasyNegativeV2.safetensors ./models/embeddings/sd15\n",
+    "!rmdir ./models/embeddings/sd15/embedding/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download bad-hand-v4\n",
-    "!download-model https://civitai.com/api/download/models/230261?type=Model&format=SafeTensor ./models/embeddings/sd15\n",
+    "!download-model https://civitai.com/api/download/models/230261?type=Model&format=SafeTensor ./models/embeddings/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download bad-hands-v5\n",
-    "hf_hub_download(repo_id=\"Kajise/bad-hands\", filename=\"bad-hands-5.safetensors\", local_dir=\"./models/embeddings/sd15\")\n",
+    "hf_hub_download(repo_id=\"Kajise/bad-hands\", filename=\"bad-hands-5.safetensors\", local_dir=\"./models/embeddings/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download bad_prompt_version2\n",
-    "hf_hub_download(repo_id=\"Nerfgun3/bad_prompt\", repo_type=\"dataset\", filename=\"bad_prompt_version2.pt\", local_dir=\"./models/embeddings/sd15\")\n",
+    "hf_hub_download(repo_id=\"Nerfgun3/bad_prompt\", repo_type=\"dataset\", filename=\"bad_prompt_version2.pt\", local_dir=\"./models/embeddings/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download bad-artist-anime\n",
-    "hf_hub_download(repo_id=\"nick-x-hacker/bad-artist\", filename=\"bad-artist-anime.pt\", local_dir=\"./models/embeddings/sd15\")\n",
+    "hf_hub_download(repo_id=\"nick-x-hacker/bad-artist\", filename=\"bad-artist-anime.pt\", local_dir=\"./models/embeddings/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download bad-artist\n",
-    "hf_hub_download(repo_id=\"nick-x-hacker/bad-artist\", filename=\"bad-artist.pt\", local_dir=\"./models/embeddings/sd15\")\n",
+    "hf_hub_download(repo_id=\"nick-x-hacker/bad-artist\", filename=\"bad-artist.pt\", local_dir=\"./models/embeddings/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download Deep Negative V1 75 T\n",
-    "!download-model https://civitai.com/api/download/models/5637 ./models/embeddings/sd15\n",
+    "!download-model https://civitai.com/api/download/models/5637 ./models/embeddings/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download veryBadImageNegative\n",
-    "!download-model https://civitai.com/api/download/models/25820 ./models/embeddings/sd15\n",
+    "!download-model https://civitai.com/api/download/models/25820 ./models/embeddings/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download GS-Boyish\n",
     "!download-model https://civitai.com/api/download/models/95611 ./models/embeddings/sd15"
    ]
@@ -253,7 +476,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11e_sd15_ip2p_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 ip2p Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11e_sd15_ip2p_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -262,7 +486,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11e_sd15_shuffle_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Shuffle Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11e_sd15_shuffle_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -271,7 +496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11f1e_sd15_tile_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Tile Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11f1e_sd15_tile_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -280,7 +506,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11f1p_sd15_depth_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Depth Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11f1p_sd15_depth_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -289,7 +516,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_canny_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Canny Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_canny_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -298,7 +526,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_inpaint_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Inpaint Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_inpaint_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -307,7 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_lineart_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Lineart Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_lineart_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -316,7 +546,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_mlsd_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 MLSD Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_mlsd_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -325,7 +556,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_normalbae_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet NormalBae Canny Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_normalbae_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -334,7 +566,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_openpose_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 OpenPose Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_openpose_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -343,7 +576,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_scribble_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Scribble Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_scribble_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -352,7 +586,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_seg_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Seg Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_seg_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -361,7 +596,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_softedge_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Softedge Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15_softedge_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   },
   {
@@ -370,13 +606,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15s2_lineart_anime_fp16.safetensors\", local_dir=\"./models/controlnet\")"
+    "# Download ControlNet SD15 Lineart Anime Model\n",
+    "hf_hub_download(repo_id=\"comfyanonymous/ControlNet-v1-1_fp16_safetensors\", filename=\"control_v11p_sd15s2_lineart_anime_fp16.safetensors\", local_dir=\"./models/controlnet/sd15\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -390,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
