--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +285,10 @@
     "import wget\n",
     "from subprocess import Popen\n",
     "\n",
-    "# wget.download(url=\"https://raw.githubusercontent.com/ashleykleynhans/civitai-downloader/main/download.py\")\n",
-    "# password=getpass()\n",
-    "# !echo {password} > mypassword\n",
-    "!sudo -S cp download.py /usr/local/bin/download-model < mypassword\n",
+    "with open('mypassword', 'w') as f:\n",
+    "    password=getpass()\n",
+    "    f.write(password)\n",
+    "!sudo -S cp download-model.py /usr/local/bin/download-model < mypassword\n",
     "!sudo -S chmod +x /usr/local/bin/download-model < mypassword"
    ]
   },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "'e6e97f3ae1758b899f3be4e905975192'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
