--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -329,29 +329,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/bin/download-model: line 1: import: command not found\n",
-      "/usr/local/bin/download-model: line 2: import: command not found\n",
-      "/usr/local/bin/download-model: line 3: import: command not found\n",
-      "/usr/local/bin/download-model: line 4: import: command not found\n",
-      "/usr/local/bin/download-model: line 5: import: command not found\n",
-      "/usr/local/bin/download-model: line 6: from: command not found\n",
-      "/usr/local/bin/download-model: line 7: from: command not found\n",
-      "/usr/local/bin/download-model: line 8: import: command not found\n",
-      "/usr/local/bin/download-model: line 10: syntax error near unexpected token `('\n",
-      "/usr/local/bin/download-model: line 10: `TOKEN_FILE = Path.home() / '.civitai' / 'config''\n"
+      "Downloading: HeadinJar.safetensors [100.00%] - 121.92 MB/s\n",
+      "Download completed. File saved as: HeadinJar.safetensors\n",
+      "Downloaded in 1s\n"
      ]
     }
    ],
    "source": [
-    "# Download Dullahan LoRA\n",
+    "# Download HeadinJar LoRA\n",
     "!download-model https://civitai.com/api/download/models/77230 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: kirito-10.safetensors [100.00%] - 62.51 MB/s\n",
+      "Download completed. File saved as: kirito-10.safetensors\n",
+      "Downloaded in 1s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download Kirito LoRA\n",
+    "!download-model https://civitai.com/api/download/models/141405 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: eugeo-10.safetensors [100.00%] - 55.25 MB/s\n",
+      "Download completed. File saved as: eugeo-10.safetensors\n",
+      "Downloaded in 0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download Eugeo LoRA\n",
+    "!download-model https://civitai.com/api/download/models/158391 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: Tomboy.safetensors [100.00%] - 33.87 MB/s\n",
+      "Download completed. File saved as: Tomboy.safetensors\n",
+      "Downloaded in 0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download Tomboy LoRA\n",
+    "!download-model https://civitai.com/api/download/models/120588 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: TomboyBuzzcut1-2-0805.safetensors [100.00%] - 56.09 MB/s\n",
+      "Download completed. File saved as: TomboyBuzzcut1-2-0805.safetensors\n",
+      "Downloaded in 1s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download TomboyBuzzcut1-2-0805 LoRA\n",
+    "!download-model https://civitai.com/api/download/models/91509 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: princess_carry_v0.1.safetensors [100.00%] - 40.51 MB/ss\n",
+      "Download completed. File saved as: princess_carry_v0.1.safetensors\n",
+      "Downloaded in 0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download Princess Carry LoRA\n",
+    "!download-model https://civitai.com/api/download/models/112975 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: shima920_v2-000011.safetensors [100.00%] - 369.25 MB/s\n",
+      "Download completed. File saved as: shima920_v2-000011.safetensors\n",
+      "Downloaded in 11s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download Shima920 V2 LoRA\n",
+    "!download-model  https://civitai.com/api/download/models/92833 ./models/loras/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: Anime Enhancer - Midrange - ClipSkip1 - [Concept] - Version 1.safetensors [100.00%] - 46.50 MB/s\n",
+      "Download completed. File saved as: Anime Enhancer - Midrange - ClipSkip1 - [Concept] - Version 1.safetensors\n",
+      "Downloaded in 6s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download Anime Enhancer Midrange LoRA\n",
+    "!download-model https://civitai.com/api/download/models/215522 ./models/loras/sd15"
    ]
   },
   {
