--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1395,6 +1395,46 @@
     "# Download Head Swap (Male Head on Female Body) Pony\n",
     "!download-model https://civitai.com/api/download/models/528192 ./models/loras/pony"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Head Swap (Female Head on Male Body) Pony\n",
+    "!download-model https://civitai.com/api/download/models/528196 ./models/loras/pony"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SDXL Pony Headless\n",
+    "!download-model https://civitai.com/api/download/models/357744 ./models/loras/pony"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SDXL Pony Disembodied Head\n",
+    "!download-model https://civitai.com/api/download/models/360519 ./models/loras/pony"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Tomboy Style Pony\n",
+    "!download-model https://civitai.com/api/download/models/647477 ./models/loras/pony"
+   ]
   }
  ],
  "metadata": {
