--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download SD15 Model"
+    "### Download Stable Diffusion 1.5 Model"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download SD2x Model"
+    "### Download Stable Diffusion 2.x Model"
    ]
   },
   {
@@ -745,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download SDXL Model"
+    "### Download Stable Diffusion XL Model"
    ]
   },
   {
@@ -833,6 +833,16 @@
    "source": [
     "# Download Juggernaut XL Model\n",
     "hf_hub_download(repo_id=\"RunDiffusion/Juggernaut-XI-v11\", filename=\"Juggernaut-XI-byRunDiffusion.safetensors\", local_dir=\"./models/checkpoints/sdxl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download NoobAI XL Model\n",
+    "!download-model https://civitai.com/api/download/models/968495 ./models/checkpoints/sdxl"
    ]
   },
   {
@@ -1312,7 +1322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download Pony Model"
+    "### Download Pony Diffusion Model"
    ]
   },
   {
@@ -1434,6 +1444,204 @@
    "source": [
     "# Download Tomboy Style Pony\n",
     "!download-model https://civitai.com/api/download/models/647477 ./models/loras/pony"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Illustrious XL Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Illustrious XL Model\n",
+    "hf_hub_download(repo_id=\"OnomaAIResearch/Illustrious-xl-early-release-v0\", filename=\"Illustrious-XL-v0.1.safetensors\", local_dir=\"./models/checkpoints/ilxl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Stable Diffusion 3.x Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Stable Diffusion 3.5 Large Model\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"sd3.5_large.safetensors\", local_dir=\"./models/checkpoints/sd3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Clip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Clip L\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/clip_l.safetensors\", local_dir=\"./models/clip/sd3\")\n",
+    "!mv ./models/clip/sd3/text_encoders/clip_l.safetensors ./models/clip/sd3/clip_l.safetensors\n",
+    "!rmdir ./models/clip/sd3/text_encoders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Clip G\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/clip_g.safetensors\", local_dir=\"./models/clip/sd3\")\n",
+    "!mv ./models/clip/sd3/text_encoders/clip_g.safetensors ./models/clip/sd3/clip_g.safetensors\n",
+    "!rmdir ./models/clip/sd3/text_encoders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download T5 XXL FP8\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/t5xxl_fp8_e4m3fn.safetensors\", local_dir=\"./models/clip/sd3\")\n",
+    "!mv ./models/clip/sd3/text_encoders/t5xxl_fp8_e4m3fn.safetensors ./models/clip/sd3/t5xxl_fp8_e4m3fn.safetensors\n",
+    "!rmdir ./models/clip/sd3/text_encoders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download T5 XXL FP16\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"text_encoders/t5xxl_fp16.safetensors\", local_dir=\"./models/clip/sd3\")\n",
+    "!mv ./models/clip/sd3/text_encoders/t5xxl_fp16.safetensors ./models/clip/sd3/t5xxl_fp16.safetensors\n",
+    "!rmdir ./models/clip/sd3/text_encoders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Flux.1 Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Flux.1 Dev Model\n",
+    "hf_hub_download(repo_id=\"black-forest-labs/FLUX.1-dev\", filename=\"flux1-dev.safetensors\", local_dir=\"./models/checkpoints/flux1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Flux.1 Dev Model\n",
+    "hf_hub_download(repo_id=\"bluepen5805/blue_pencil-flux1\", filename=\"blue_pencil-flux1-v0.2.1-bf16.safetensors\", local_dir=\"./models/checkpoints/flux1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### VAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Flux.1 Dev VAE\n",
+    "hf_hub_download(repo_id=\"black-forest-labs/FLUX.1-dev\", filename=\"ae.safetensors\", local_dir=\"./models/vae/flux1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### LoRA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Flux.1 Dev AntiBlur LoRA\n",
+    "hf_hub_download(repo_id=\"Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur\", filename=\"FLUX-dev-lora-AntiBlur.safetensors\", local_dir=\"./models/loras/flux1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Flux.1 Dev Add Details LoRA\n",
+    "hf_hub_download(repo_id=\"Shakker-Labs/FLUX.1-dev-LoRA-add-details\", filename=\"FLUX-dev-lora-add_details.safetensors\", local_dir=\"./models/loras/flux1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Tomboy for Flux LoRA\n",
+    "!download-model https://civitai.com/api/download/models/797322 ./models/loras/flux1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Upscale Model"
    ]
   }
  ],
