--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import notebook_login, hf_hub_download\n",
+    "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download\n",
     "\n",
     "notebook_login()"
    ]
@@ -1642,6 +1642,185 @@
    "metadata": {},
    "source": [
     "### Download Upscale Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ESRGAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download 4x AnimeSharp Model\n",
+    "hf_hub_download(repo_id=\"Kim2091/AnimeSharp\", filename=\"4x-AnimeSharp.pth\", local_dir=\"./models/upscale_models/ESRGAN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download 4x UltraSharp Model\n",
+    "hf_hub_download(repo_id=\"Kim2091/UltraSharp\", filename=\"4x-UltraSharp.pth\", local_dir=\"./models/upscale_models/ESRGAN\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RealESRGAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from requests import get\n",
+    "\n",
+    "def download(url, filename):\n",
+    "    with open(filename, 'wb') as f:\n",
+    "        response = get(url)\n",
+    "        f.write(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download RealESRGAN x4 Plus Model\n",
+    "download(\"https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth\", \"./models/upscale_models/RealESRGAN/RealESRGAN_x4plus.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download RealESRGAN x4 Plus Anime 6B Model\n",
+    "download(\"https://github.com/xinntao/Real-ESRGAN/releases/download/v0.2.2.4/RealESRGAN_x4plus_anime_6B.pth\", \"./models/upscale_models/RealESRGAN/RealESRGAN_x4plus_anime_6B.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### LDSR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download LDSR Model\n",
+    "download(\"https://heibox.uni-heidelberg.de/f/31a76b13ea27482981b4/?dl=1\", \"./models/upscale_models/LDSR/2021-11-02T06-24-44-project.yaml\")\n",
+    "download(\"https://heibox.uni-heidelberg.de/f/578df07c8fc04ffbadf3/?dl=1\", \"./models/upscale_models/LDSR/last.ckpt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stable Diffusion x4 Upscale Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download Stable Diffusion x4 Upscale model\n",
+    "hf_hub_download(repo_id=\"stabilityai/stable-diffusion-x4-upscaler\", filename=\"x4-upscaler-ema.safetensors\", local_dir=\"./models/checkpoints/upscale\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Face Restore Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download GFPGAN Model\n",
+    "download(\"https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/GFPGANv1.4.pth\", \"./models/facerestore_models/GFPGAN/GFPGANv1.4.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Code Former Model\n",
+    "download(\"https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/CodeFormer.pth\", \"./models/facerestore_models/Codeformer/CodeFormer.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Restore Former Model\n",
+    "download(\"https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/RestoreFormer.pth\", \"./models/facerestore_models/Codeformer/RestoreFormer.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download UltraLytics Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### BBOX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*.pt\", ignore_patterns=\"*-seg.pt\", local_dir=\"./models/ultralytics/bbox\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SEGM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*-seg.pt\", local_dir=\"./models/ultralytics/segm\")"
    ]
   }
  ],
