--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1792,26 +1792,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### BBOX"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download UltraLytics BBOX Model\n",
     "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*.pt\", ignore_patterns=\"*-seg.pt\", local_dir=\"./models/ultralytics/bbox\")"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download UltraLytics SEGM Model\n",
+    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*-seg.pt\", local_dir=\"./models/ultralytics/segm\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### SEGM"
+    "### Download Segment Anything Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SAMS"
    ]
   },
   {
@@ -1820,7 +1831,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snapshot_download(repo_id=\"Bingsu/adetailer\", allow_patterns=\"*-seg.pt\", local_dir=\"./models/ultralytics/segm\")"
+    "# Download SAM Vit H Model\n",
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\", \"./models/sams/sam_vit_h_4b8939.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SAM Vit L Model\n",
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth\", \"./models/sams/sam_vit_l_0b3195.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SAM Vit B Model\n",
+    "download(\"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth\", \"./models/sams/sam_vit_b_01ec64.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SAMS HQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SAM HQ Vit H Model\n",
+    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_h.pth\", \"./models/sams/sam_hq_vit_h.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SAM HQ Vit L Model\n",
+    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_l.pth\", \"./models/sams/sam_hq_vit_l.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SAM HQ Vit B Model\n",
+    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_b.pth\", \"./models/sams/sam_hq_vit_b.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SAM HQ Vit Tiny Model\n",
+    "download(\"https://huggingface.co/lkeab/hq-sam/resolve/main/sam_hq_vit_tiny.pth\", \"./models/sams/sam_hq_vit_tiny.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Clip Vision Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download OpenAI Clip Vit Large Patch14\n",
+    "hf_hub_download(repo_id=\"openai/clip-vit-large-patch14\", filename=\"model.safetensors\", local_dir=\"./models/clip_vision\")\n",
+    "!mv ./models/clip_vision/model.safetensors ./models/clip_vision/clip-vit-large-patch14.safetensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Laion CLIP-ViT-H-14-laion2B-s32B-b79K\n",
+    "hf_hub_download(repo_id=\"laion/CLIP-ViT-H-14-laion2B-s32B-b79K\", filename=\"open_clip_pytorch_model.safetensors\", local_dir=\"./models/clip_vision\")\n",
+    "!mv ./models/clip_vision/open_clip_pytorch_model.safetensors ./models/clip_vision/CLIP-ViT-H-14-laion2B-s32B-b79K.safetensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Laion CLIP-ViT-bigG-14-laion2B-39B-b160k\n",
+    "hf_hub_download(repo_id=\"laion/CLIP-ViT-bigG-14-laion2B-39B-b160k\", filename=\"open_clip_pytorch_model.safetensors\", local_dir=\"./models/clip_vision\")\n",
+    "!mv ./models/clip_vision/open_clip_pytorch_model.safetensors ./models/clip_vision/CLIP-ViT-bigG-14-laion2B-39B-b160k.safetensors"
    ]
   }
  ],
