--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -206,6 +206,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download AAM AnyLora Anime Mix Model\n",
+    "hf_hub_download(repo_id=\"Lykon/AnyLoRA\", filename=\"AAM_Anylora_AnimeMix.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Blue Pencil Model\n",
+    "hf_hub_download(repo_id=\"bluepen5805/blue_pencil\", filename=\"blue_pencil-v10.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Blue Pencil Realistic Model\n",
+    "hf_hub_download(repo_id=\"bluepen5805/blue_pencil_realistic\", filename=\"blue_pencil_realistic-v1.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,7 +283,17 @@
    "outputs": [],
    "source": [
     "# Download Anything VAE\n",
-    "!download-model https://civitai.com/api/download/models/119279?type=Model&format=PickleTensor ./models/vae/sd15"
+    "!download-model https://civitai.com/api/download/models/119279 ./models/vae/sd15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download ClearVAE\n",
+    "!download-model https://civitai.com/api/download/models/88156 ./models/vae/sd15"
    ]
   },
   {
@@ -846,6 +886,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download AAM XL Anime Mix Model\n",
+    "hf_hub_download(repo_id=\"Lykon/AnyLoRA\", filename=\"AAM_XL_Anime_Mix.safetensors\", local_dir=\"./models/checkpoints/sdxl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Blue Pencil XL Model\n",
+    "hf_hub_download(repo_id=\"bluepen5805/blue_pencil-XL\", filename=\"blue_pencil-XL-v7.0.0.safetensors\", local_dir=\"./models/checkpoints/sdxl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Anima Pencil XL Model\n",
+    "hf_hub_download(repo_id=\"bluepen5805/anima_pencil-XL\", filename=\"anima_pencil-XL-v5.0.0.safetensors\", local_dir=\"./models/checkpoints/sdxl\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1363,6 +1433,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Pony Pencil XL Model\n",
+    "hf_hub_download(repo_id=\"bluepen5805/pony_pencil-XL\", filename=\"pony_pencil-XL-v2.0.0.safetensors\", local_dir=\"./models/checkpoints/pony\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1468,6 +1548,16 @@
    "source": [
     "# Download Illustrious XL Model\n",
     "hf_hub_download(repo_id=\"OnomaAIResearch/Illustrious-xl-early-release-v0\", filename=\"Illustrious-XL-v0.1.safetensors\", local_dir=\"./models/checkpoints/ilxl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Illustrious Pencil XL Model\n",
+    "hf_hub_download(repo_id=\"bluepen5805/illustrious_pencil-XL\", filename=\"illustrious_pencil-XL-v1.2.0.safetensors\", local_dir=\"./models/checkpoints/ilxl\")"
    ]
   },
   {
@@ -1579,7 +1669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download Flux.1 Dev Model\n",
+    "# Download Blue Pencil Flux 1 Model\n",
     "hf_hub_download(repo_id=\"bluepen5805/blue_pencil-flux1\", filename=\"blue_pencil-flux1-v0.2.1-bf16.safetensors\", local_dir=\"./models/checkpoints/flux1\")"
    ]
   },
