--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -236,6 +236,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download XpucT Reliberate Model\n",
+    "hf_hub_download(repo_id=\"XpucT/Reliberate\", filename=\"Reliberate_v3.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download XpucT Reliberate Inpainting Model\n",
+    "hf_hub_download(repo_id=\"XpucT/Reliberate\", filename=\"Reliberate_v3-inpainting.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download XpucT Anime Model\n",
+    "hf_hub_download(repo_id=\"XpucT/Anime\", filename=\"Anime_v2.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download XpucT Anime Inpainting Model\n",
+    "hf_hub_download(repo_id=\"XpucT/Anime\", filename=\"Anime_v2-inpainting.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download XpucT Deliberate Model\n",
+    "hf_hub_download(repo_id=\"XpucT/Deliberate\", filename=\"Deliberate_v6.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download XpucT Deliberate Inpainting Model\n",
+    "hf_hub_download(repo_id=\"XpucT/Deliberate\", filename=\"Deliberate_v6-inpainting.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download AnyLoRA BakedVae Blessed FP16 Model\n",
+    "hf_hub_download(repo_id=\"Lykon/AnyLoRA\", filename=\"AnyLoRA_bakedVae_blessed_fp16.safetensors\", local_dir=\"./models/checkpoints/sd15\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -913,6 +983,16 @@
    "source": [
     "# Download Anima Pencil XL Model\n",
     "hf_hub_download(repo_id=\"bluepen5805/anima_pencil-XL\", filename=\"anima_pencil-XL-v5.0.0.safetensors\", local_dir=\"./models/checkpoints/sdxl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download DreamShaper XL Model\n",
+    "hf_hub_download(repo_id=\"Lykon/DreamShaper\", filename=\"DreamShaperXL1.0Alpha2_fixedVae_half_00001_.safetensors\", local_dir=\"models/checkpoints/sdxl\")"
    ]
   },
   {
