--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -20,7 +20,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash run_first.sh"
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "def makedirs(path):\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)\n",
+    "        print(path)\n",
+    "\n",
+    "ckpt_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1', 'upscale']\n",
+    "makedirs(f\"./models/checkpoints/{[dir for dir in ckpt_dir]}\")\n",
+    "\n",
+    "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
+    "makedirs(f\"./models/vae/{[dir for dir in vae_dir]}\")\n",
+    "\n",
+    "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
+    "makedirs(f\"./models/loras/{[dir for dir in lora_dir]}\")\n",
+    "\n",
+    "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
+    "makedirs(f\"./models/embeddings/{[dir for dir in embedding_dir]}\")\n",
+    "\n",
+    "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
+    "makedirs(f\"./models/controlnet/{[dir for dir in controlnet_dir]}\")\n",
+    "\n",
+    "clip_dir='sd3'\n",
+    "makedirs(f\"./models/clip/{clip_dir}\")"
    ]
   },
   {
@@ -120,9 +144,11 @@
    "source": [
     "# Download AbyssOrangeMix3 Model\n",
     "hf_hub_download(repo_id=\"WarriorMama777/OrangeMixs\", filename=\"Models/AbyssOrangeMix3/AOM3A1B_orangemixs.safetensors\", local_dir=\"./models/checkpoints/sd15\")\n",
-    "!mv ./models/checkpoints/sd15/Models/AbyssOrangeMix3/AOM3A1B_orangemixs.safetensors ./models/checkpoints/sd15/AOM3A1B_orangemixs.safetensors\n",
-    "!rmdir ./models/checkpoints/sd15/Models/AbyssOrangeMix3/\n",
-    "!rmdir ./models/checkpoints/sd15/Models/"
+    "filename=\"AOM3A1B_orangemixs.safetensors\"\n",
+    "src=\"./models/checkpoints/sd15/Models/AbyssOrangeMix3\"\n",
+    "dst=\"./models/checkpoints/sd15\"\n",
+    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
+    "shutil.rmtree(\"./models/checkpoints/sd15/Models\")"
    ]
   },
   {
@@ -330,8 +356,11 @@
    "source": [
     "# Download Waifu Diffusion v1.4 kl-f8-anime2 VAE\n",
     "hf_hub_download(repo_id=\"hakurei/waifu-diffusion-v1-4\", filename=\"vae/kl-f8-anime2.ckpt\", local_dir=\"./models/vae/sd15\")\n",
-    "!mv ./models/vae/sd15/vae/kl-f8-anime2.ckpt ./models/vae/sd15/kl-f8-anime2.ckpt\n",
-    "!rmdir ./models/vae/sd15/vae/"
+    "filename=\"kl-f8-anime2.ckpt\"\n",
+    "src=\"./models/vae/sd15/vae/\"\n",
+    "dst=\"./models/vae/sd15/\"\n",
+    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
+    "os.rmdir(src)"
    ]
   },
   {
@@ -342,8 +371,11 @@
    "source": [
     "# Download OrangeMix VAE\n",
     "hf_hub_download(repo_id=\"WarriorMama777/OrangeMixs\", filename=\"VAEs/orangemix.vae.pt\", local_dir=\"./models/vae/sd15\")\n",
-    "!mv ./models/vae/sd15/VAEs/orangemix.vae.pt ./models/vae/sd15/orangemix.vae.pt\n",
-    "!rmdir ./models/vae/sd15/VAEs/"
+    "filename=\"orangemix.vae.pt\"\n",
+    "src=\"./models/vae/sd15/VAEs\"\n",
+    "dst=\"./models/vae/sd15/\"\n",
+    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
+    "os.rmdir(src)"
    ]
   },
   {
@@ -381,7 +413,10 @@
    "source": [
     "# Download Stable Diffusion 1.5 LCM LoRA\n",
     "hf_hub_download(repo_id=\"latent-consistency/lcm-lora-sdv1-5\", filename=\"pytorch_lora_weights.safetensors\", local_dir=\"./models/loras/sd15\")\n",
-    "!mv ./models/loras/sd15/pytorch_lora_weights.safetensors ./models/loras/sd15/lcm-lora-sdv1-5.safetensors"
+    "filepath=\"./models/loras/sd15\"\n",
+    "src=os.path.join(filepath, \"pytorch_lora_weights.safetensors\")\n",
+    "dst=os.path.join(filepath, \"lcm-lora-sdv1-5.safetensors\")\n",
+    "os.rename(src, dst)"
    ]
   },
   {
